# ezancestry

./: .gitignore  LICENSE  Procfile  README.md  __init__.py  app.py  conf.example.ini  conf.ini  details.md  dragen_comparison.ipynb  ezancestry.py  ezancestry_library_tutorial.ipynb  find_default_model.ipynb  intro.md  liftover.ipynb  opensnp_ancestry.py  pyproject.toml  requirements.txt  setup.py  util.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
analysis/: opensnp_ancestry.py
data/aisnps/: KIDD.AISNP.txt  Kidd_55_AISNPs.txt  SELDIN.AISNP.txt  Seldin_128_AISNPs.grch36.txt  Seldin_128_AISNPs.txt  custom.aisnp.txt  dragen.kidd.dataframe.csv  dragen_gts.csv  kidd.1kG.csv  kidd.aisnp.hg38.txt  kidd.aisnp.txt  report_Seldin_128_AISNPs.grch36.txt.xls  seldin.1kG.csv  seldin.aisnp.hg38.txt  seldin.aisnp.txt  thousand_genomes.Kidd.dataframe.csv  thousand_genomes.Seldin.dataframe.csv
data/models/: kidd_population.pkl  kidd_superpopulation.pkl  knn.NCA.KIDD.POPULATION.cv.csv  knn.NCA.KIDD.SUPERPOPULATION.cv.csv  knn.NCA.SELDIN.POPULATION.cv.csv  knn.NCA.SELDIN.SUPERPOPULATION.cv.csv  knn.PCA.KIDD.POPULATION.cv.csv  knn.PCA.KIDD.POPULATION.holdout.csv  knn.PCA.KIDD.SUPERPOPULATION.cv.csv  knn.PCA.KIDD.SUPERPOPULATION.holdout.csv  knn.PCA.SELDIN.POPULATION.cv.csv  knn.PCA.SELDIN.POPULATION.holdout.csv  knn.PCA.SELDIN.SUPERPOPULATION.cv.csv  knn.PCA.SELDIN.SUPERPOPULATION.holdout.csv  knn.UMAP.KIDD.POPULATION.cv.csv  knn.UMAP.KIDD.POPULATION.holdout.csv  knn.UMAP.KIDD.SUPERPOPULATION.cv.csv  knn.UMAP.KIDD.SUPERPOPULATION.holdout.csv  knn.UMAP.SELDIN.POPULATION.cv.csv  knn.UMAP.SELDIN.POPULATION.holdout.csv  knn.UMAP.SELDIN.SUPERPOPULATION.cv.csv  knn.UMAP.SELDIN.SUPERPOPULATION.holdout.csv  knn.nca.kidd.population.cv.csv  knn.nca.kidd.population.holdout.csv  knn.nca.kidd.superpopulation.cv.csv  knn.nca.kidd.superpopulation.holdout.csv  knn.nca.seldin.population.cv.csv  knn.nca.seldin.population.holdout.csv  knn.nca.seldin.superpopulation.cv.csv  knn.nca.seldin.superpopulation.holdout.csv  knn.pca.kidd.population.cv.csv  knn.pca.kidd.population.holdout.csv  knn.pca.kidd.superpopulation.cv.csv  knn.pca.kidd.superpopulation.holdout.csv  knn.pca.seldin.population.cv.csv  knn.pca.seldin.population.holdout.csv  knn.pca.seldin.superpopulation.cv.csv  knn.umap.kidd.population.cv.csv  knn.umap.kidd.population.holdout.csv  knn.umap.kidd.superpopulation.cv.csv  (+7 more)
ezancestry/: __init__.py  __main__.py  aisnps.py  commands.py  config.py  dimred.py  evaluate.py  fetch.py  model.py  plot.py  process.py  settings.py
streamlit/: app.py  requirements.txt  util.py
tests/: test_ezancestry.py
tests/data/: sample_genome_snps.txt  snp_sampler.ipynb
