[tool.poetry]
name = "ezancestry"
version = "0.1.0"
description = "Easily predict and visualize genetic ancestry. Evaluate custom ancestry-informative SNP sets."
authors = ["arvkevi <arvkevi@gmail.com>"]
license = "MIT"
packages = [
    { include = "data/**/*" },
    { include = "ezancestry" },
]
readme = "README.md"
keywords = ["ancestry", "genetics", "bioinformatics", "machine learning"]

[tool.poetry.scripts]
ezancestry = "ezancestry.commands:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
loguru = "^0.5.3"
numpy = "^1.21.2"
pandas = "^1.3.2"
plotly = ">=5.3.1"
scikit-learn = ">=1.0.1"
snps = ">=2.3.0"
typer = ">=0.8.0"
pysam = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest-json-report = "^1.4.1"
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
ipykernel = "^6.29.2"

[tool.poetry.group.streamlit.dependencies]
streamlit = ">1.0.1,<1.37"
altair = "<5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
